<resources>
    <string name="app_name">CSDevelop</string>
    <string name="label_bienvenida">Bienvenido a Conciertos Solo!</string>
    <string name="label_nuevoUser"><u>Registrarme Ahora!</u></string>
    <string name="label_olvide_password">Olvidé mi contraseña?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_editarPerfil">EDITAR PERFIL</string>
    <string name="label_resetearcontrasena">RESETEAR CONTRASEÑA</string>

    <!-- strings de validación -->
    <string name="invalid_mail">E-mail incorrecto</string>
    <string name="invalid_password">Contraseña no, válida. Min 8 dígitos.</string>
    <string name="invalid_username">Max 3 a 15 caracteres</string>
    <string name="invalid_passwordLogin">Introduzca una contraseña</string>
    <string name="invalid_usernameLogin">Introduzca un email</string>
    <string name="invalid_currentPassword">Introduzca la contraseña actual</string>
    <string name="invalid_newPassword">Introduzca la contraseña actual</string>
    <string name="invalid_newPassword2">Introduzca la contraseña actual</string>


    <!-- strings grupos -->
    <string name="label_grupos">Grupos</string>

    <!-- strings publicacion -->
    <string name="aviso_foto">La subida de la imagen es opcional</string>
    <string name="aviso_ig">Las imágenes compartidas podrán aparecer en el IG oficial de Conciertos Solo</string>
    <string name="titulo_nuevaPubli">Nueva publicacion</string>
    <string name="titulo_hint_publi">Comparte tu experiencia con nosotros!</string>
    <string name="hint_publi">Escribe aquí tú comentario...</string>
    <string name="btn_img">Añadir imagen!</string>
    <string name="btn_publicar">Publicar!</string>

    <!-- strings chat  -->
    <string name="escribir">Escribe algo!</string>

    <!-- strings detalle  -->
    <string name="detalle_conci">Detalles del evento</string>
    <string name="btn_enlace">Entradas</string>
    <string name="btn_accesoGrupo">Ir al grupo</string>
    <string name="detalles_sala">Detalles de la sala:</string>

    <!-- strings log in   -->
    <string name="text_usuario">Usuario</string>
    <string name="text_contrasenia">Contraseña</string>
    <string name="btn_is">Iniciar sesión</string>
    <string name="btn_rg">Registrarme!</string>
    <string name="btn_olvideContraseña">Olvidé mi contraseña</string>

    <!-- strings registro -->

    <string name="edt_email">Email</string>
    <string name="edt_confirmPas">Confirmar contraseña</string>
    <string name="btn_rguser">Registrar usuario</string>
    <string name="btn_tengoCuenta">Ya tengo cuenta!</string>

    <!-- strings perfil -->
    <string name="label_perfil">Perfil</string>
    <string name="btn_editarPerfil">Editar perfil</string>
    <string name="favoritos">Mis conciertos favoritos:</string>
    <string name="btn_editarFoto">Editar foto de perfil</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="btn_actualizarNombre">Actualizar nombre de usuario</string>
    <string name="btn_cambioPass">Cambiar Contraseña</string>
    <string name="edt_actualPasw">Contraseña actual</string>
    <string name="edt_nuevaPas">Contraseña nueva</string>
    <string name="edt_confirmarPasw">Confirmar contraseña nueva</string>
    <string name="btn_guardarPasw">Guardar nueva contraseña</string>

    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="web">Web</string>

    <string name="btn_galeria">Galería</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_salir">Salir</string>

    <!-- string reset passw -->
    <string name="btn_enviar">Enviar</string>

    <!-- string buscar -->
    <string name="edt_buscar">Buscar aquí</string>

    <!-- string inicio -->
    <string name="label_inicio">Eventos</string>

    <!-- string Social -->
    <string name="label_Social">Social</string>

    <!-- string menu -->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_social">Social</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_perfil">Perfil</string>


    <!-- alertas -->
    <string name="correoEnviado">El correo ha sido enviado</string>
    <string name="correoNingunaCuenta">Este correo no está asociado a ninguna cuenta</string>
    <string name="contraseñaActual">Introduce la contraseña actual</string>
    <string name="contraseñaNoValida">Contraseña nueva no valida. Min 8 caracteres</string>
    <string name="emailInvalido">Email Inválido</string>
    <string name="contraIncorrecta">Contraseña Incorrecta</string>
    <string name="nombreActualizado">Nombre de usuario actualizado</string>
    <string name="errorNombreActualizado">Error al actualizar el nombre de usuario</string>
    <string name="nombreExiste">El nombre de usuario ya existe</string>
    <string name="fotoEliminada">Foto de perfil eliminada</string>
    <string name="fotoActualizada">Foto de perfil actualizada</string>
    <string name="errorFotoEliminada">Error al eliminar la foto</string>
    <string name="contraActualizada">Contraseña actualizada</string>
    <string name="errorContraAct">Error al actualizar la contraseña</string>
    <string name="mismaContraseña">La contraseña actual y la nueva contraseña son iguales. Elija una contraseña diferente</string>
    <string name="contraNoCoinciden">Las contraseñas no coinciden</string>
    <string name="contraActualIncorrecta">Contraseña actual INCORRECTA</string>
    <string name="emailExiste">Este email ya tiene una cuenta asociada. Inicie sesión</string>
    <string name="cuentaInhabilitada">La cuenta de usuario ha sido inhabilitada</string>
    <string name="nombreNoDisponible">Nombre de usuario no disponible</string>
    <string name="registroExitoso">Usuario registrado con éxito</string>
    <string name="errorRegistro">Error al registrarse</string>
    <string name="anadirTexto">Añade texto a tu publicacion</string>
    <string name= "errorGeneral">ERROR</string>

    <string name="noInternet">No hay conexión a internet</string>
    <string name= "conexion">Por favor, asegúrese de tener una conexión a internet activa</string>
    <string name= "aceptar">Aceptar</string>

    <string name="noConciertosFavs">No hay conciertos favoritos</string>
    <string name="no_results_message">No se encontraron resultados</string>



</resources>