<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- Cabecera -->
    <LinearLayout
        android:id="@+id/cabeceraDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btonVolver"
            android:layout_width="43dp"
            android:layout_height="31dp"
            android:drawableEnd="@drawable/ic_volver" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/label_resetearcontrasena"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cabeceraDetalle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_email"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="36dp" />

        <TextView
            android:id="@+id/alertaRestablecer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/rojo"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#000000"
            android:text="@string/btn_enviar"
            android:textColor="#fff" />

    </LinearLayout>


</RelativeLayout>
