<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- esta pantalla está formada por diferentes layouts anidados, contiene
    4 campos de introducir texto y 2 botones,
    el de registrarse aun no hace nada y el de
    ya tengo cuenta que lleva a la pantalla de iniciar -->


    <LinearLayout
        android:id="@+id/LinearParte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/fondofinal">
            <!--android:background="@drawable/redd_bg"-->


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logofinal" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearParte2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/LinearParte1"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:gravity="center|center_horizontal"
            android:text="@string/label_bienvenida"
            android:textColor="@color/negro"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearParte3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearParte2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_usuario"
            app:startIconDrawable="@drawable/ic_menu_perfil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/san_francisco"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputMail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/san_francisco"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_contrasenia"
            app:startIconDrawable="@drawable/ic_password2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/san_francisco"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPasswordC"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edt_confirmPas"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/san_francisco"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/alertaRegistro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearParte4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearParte3"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end">


        <Button
            android:id="@+id/btnRG"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:drawableEnd="@drawable/ic_login"
            android:drawableTint="#fff"
            android:fontFamily="@font/san_francisco"
            android:text="@string/btn_rguser" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearParte5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/LinearParte4">


        <!--<TextView
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:gravity="center|center_horizontal"
            android:text="@string/label_nuevoUser"
            android:textColor="@color/negro"
            android:textSize="18sp"
            android:textStyle="bold" />
        />-->
        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:drawableEnd="@drawable/ic_registrarme"
            android:drawableTint="#fff"
            android:fontFamily="@font/san_francisco"
            android:text="@string/btn_tengoCuenta" />
    </LinearLayout>


</RelativeLayout>